--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,10 @@ header p span { font-size: 0.8em; font-weight: normal;}
   border-top: 1px solid #ccc;
 }
 
-.content { padding: 1em 1em; }
-.content li { list-style-type: none; font-size: 1.1em;}
-li img { float:left; padding-right: 1em; }
-li p { font-size: 0.9em; font-style: italic; }
+.content li { list-style-type: none; font-size: 1.1em; display: flex; align-items: top; gap: 10px; margin-bottom: 20px;}
+li img {padding-right: 1em; }
+li a {flex: 1;}
+li p { flex: 1 1 150px; font-size: 0.9em; font-style: italic; margin: 0px;}
 
 footer {
   padding: 0 0.5em;
