--- a/views/pizza.html
+++ b/views/pizza.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 
-    <link rel="stylesheet" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+    <style>
+      *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-box-sizing:border-box}html{scroll-behavior:smooth}body{font-family:"Trebuchet MS",Helvetica,sans-serif;background:#000}input{background:grey;font-size:18px}form{display:inline-block}.centered{text-align:center}#pizzaSize{font-weight:800}.mover{position:fixed;width:256px;z-index:-1}.randomPizzaContainer{float:left;display:flex}.randomPizzaContainer:after{content:"";display:table;clear:both}.container{background-color:rgba(240,60,60,.8)}@media (min-width:768px){.container{width:750px}}@media (min-width:992px){.container{width:970px}}@media (min-width:1200px){.container{width:1170px}}
+    </style>
+    <!--<link rel="stylesheet" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/style.css"></noscript>-->
     <link rel="preload" href="css/bootstrap-grid.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/bootstrap-grid.css"></noscript>
     <link rel="preload" as="image" href="images/pizza2.png" fetchpriority="high">
     <link rel="preconnect" href="js/main.js">
-    <noscript><link rel="stylesheet" href="css/bootstrap-grid.css"></noscript>
+    
 </head>
 
 <body>
