--- a/views/pizza.html
+++ b/views/pizza.html
@@ -9,7 +9,7 @@
     <noscript><link rel="stylesheet" href="css/style.css"></noscript>
     <link rel="preload" href="css/bootstrap-grid.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="css/bootstrap-grid.css"></noscript>
-    <link rel="preload" as="image" href="images/pizza2.png" fetchpriority="high">
+    <link rel="preload" as="image" href="images/pizza2.webp" fetchpriority="high">
     <link rel="preconnect" href="js/main.js">
     
 </head>
