--- a/views/pizza.html
+++ b/views/pizza.html
@@ -113,7 +113,7 @@
         <div id="randomPizzas" class="row">
           <div id="pizza0" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
             <div style="width:35%">
-              <img src="images/pizza.avif" height="300" width="232" class="img-responsive">
+              <img src="images/pizza2.webp" height="300" width="232" class="img-responsive">
             </div>
             <div style="width:65%">
               <h4>The Udacity Special</h4>
@@ -130,7 +130,7 @@
           </div>
           <div id="pizza1" class="randomPizzaContainer" style="width:33.33%; height: 325px;">
             <div style="width:35%">
-              <img src="images/pizza.avif" class="img-responsive">
+              <img src="images/pizza2.webp" class="img-responsive">
             </div>
             <div style="width:65%">
               <h4>The Cameron Special</h4>
