--- a/views/css/style.css
+++ b/views/css/style.css
@@ -50,6 +50,10 @@ form {
 
  .container {
   background-color: rgba(240, 60, 60, 0.8);
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 @media (min-width: 768px) {
